// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client/messaging/common-message-layout/TextMessage > message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jmvSDW fNyYoQ"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-jvDgNt ldPQcX"
      tabindex="0"
    >
      <span
        class="sc-edvVIM jqUbuK"
      >
        <i
          aria-hidden="true"
          class="sc-bRBteW dGDOmy"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-bRBteW dGDOmy"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gHmoSK kRelkX sc-kubIlH gPwJGS"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-djMJHV upVlS"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-bRBteW dGDOmy"
    >
      : 
    </i>
    <span
      class="sc-gYEWkn krkUDN"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message mixing emoji and text renders them inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jmvSDW fNyYoQ"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-jvDgNt ldPQcX"
      tabindex="0"
    >
      <span
        class="sc-edvVIM jqUbuK"
      >
        <i
          aria-hidden="true"
          class="sc-bRBteW dGDOmy"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-bRBteW dGDOmy"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gHmoSK kRelkX sc-kubIlH gPwJGS"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-djMJHV upVlS"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-bRBteW dGDOmy"
    >
      : 
    </i>
    <span
      class="sc-gYEWkn krkUDN"
    >
      nice game 
      <span
        class="sc-gerFA cvtkPh"
      >
        🔥
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jmvSDW fNyYoQ"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-jvDgNt ldPQcX"
      tabindex="0"
    >
      <span
        class="sc-edvVIM jqUbuK"
      >
        <i
          aria-hidden="true"
          class="sc-bRBteW dGDOmy"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-bRBteW dGDOmy"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gHmoSK kRelkX sc-kubIlH gPwJGS"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-djMJHV upVlS"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-bRBteW dGDOmy"
    >
      : 
    </i>
    <span
      class="sc-gYEWkn krkUDN"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jmvSDW fNyYoQ"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-jvDgNt ldPQcX"
      tabindex="0"
    >
      <span
        class="sc-edvVIM jqUbuK"
      >
        <i
          aria-hidden="true"
          class="sc-bRBteW dGDOmy"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-bRBteW dGDOmy"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gHmoSK kRelkX sc-kubIlH gPwJGS"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-djMJHV upVlS"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-bRBteW dGDOmy"
    >
      : 
    </i>
    <span
      class="sc-gYEWkn krkUDN"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-gHmoSK kRelkX sc-bGxLfG eEvMFy"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-djMJHV upVlS"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jmvSDW fNyYoQ"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-jvDgNt ldPQcX"
      tabindex="0"
    >
      <span
        class="sc-edvVIM jqUbuK"
      >
        <i
          aria-hidden="true"
          class="sc-bRBteW dGDOmy"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-bRBteW dGDOmy"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gHmoSK kRelkX sc-kubIlH gPwJGS"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-djMJHV upVlS"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-bRBteW dGDOmy"
    >
      : 
    </i>
    <span
      class="sc-gYEWkn krkUDN"
    >
      hey
       
      <span
        class="sc-gHmoSK kRelkX sc-bGxLfG eEvMFy"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-djMJHV upVlS"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-gHmoSK kRelkX sc-bGxLfG eEvMFy"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-djMJHV upVlS"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jmvSDW fNyYoQ"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-jvDgNt ldPQcX"
      tabindex="0"
    >
      <span
        class="sc-edvVIM jqUbuK"
      >
        <i
          aria-hidden="true"
          class="sc-bRBteW dGDOmy"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-bRBteW dGDOmy"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gHmoSK kRelkX sc-kubIlH gPwJGS"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-djMJHV upVlS"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-bRBteW dGDOmy"
    >
      : 
    </i>
    <span
      class="sc-gYEWkn krkUDN"
    >
      hey
       
      <span
        class="sc-gHmoSK kRelkX sc-bGxLfG eEvMFy"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-djMJHV upVlS"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jmvSDW fNyYoQ"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-jvDgNt ldPQcX"
      tabindex="0"
    >
      <span
        class="sc-edvVIM jqUbuK"
      >
        <i
          aria-hidden="true"
          class="sc-bRBteW dGDOmy"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-bRBteW dGDOmy"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gHmoSK kRelkX sc-kubIlH gPwJGS"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-djMJHV upVlS"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-bRBteW dGDOmy"
    >
      : 
    </i>
    <span
      class="sc-gYEWkn krkUDN"
    >
      <span
        class="sc-gHmoSK kRelkX sc-bGxLfG eEvMFy"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-djMJHV upVlS"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jmvSDW fNyYoQ"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-jvDgNt ldPQcX"
      tabindex="0"
    >
      <span
        class="sc-edvVIM jqUbuK"
      >
        <i
          aria-hidden="true"
          class="sc-bRBteW dGDOmy"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-bRBteW dGDOmy"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gHmoSK kRelkX sc-kubIlH gPwJGS"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-djMJHV upVlS"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-bRBteW dGDOmy"
    >
      : 
    </i>
    <span
      class="sc-gYEWkn krkUDN"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-gHmoSK kRelkX sc-bGxLfG eEvMFy"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-djMJHV upVlS"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jmvSDW gBWaFf"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-jvDgNt ldPQcX"
      tabindex="0"
    >
      <span
        class="sc-edvVIM jqUbuK"
      >
        <i
          aria-hidden="true"
          class="sc-bRBteW dGDOmy"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-bRBteW dGDOmy"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gHmoSK kRelkX sc-kubIlH gPwJGS"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-djMJHV upVlS"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-bRBteW dGDOmy"
    >
      : 
    </i>
    <span
      class="sc-gYEWkn krkUDN"
    >
      Hey
       
      <span
        class="sc-gHmoSK kRelkX sc-bGxLfG eEvMFy"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-djMJHV upVlS"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with only emoji renders them jumbo-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jmvSDW fNyYoQ"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-jvDgNt ldPQcX"
      tabindex="0"
    >
      <span
        class="sc-edvVIM jqUbuK"
      >
        <i
          aria-hidden="true"
          class="sc-bRBteW dGDOmy"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-bRBteW dGDOmy"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gHmoSK kRelkX sc-kubIlH gPwJGS"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-djMJHV upVlS"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-bRBteW dGDOmy"
    >
      : 
    </i>
    <span
      class="sc-gYEWkn krkUDN"
    >
      <span
        class="sc-gerFA LKjoi"
      >
        🔥🔥
      </span>
       
      <span
        class="sc-gerFA LKjoi"
      >
        🎉
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with too many emoji for jumbo stays inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jmvSDW fNyYoQ"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-jvDgNt ldPQcX"
      tabindex="0"
    >
      <span
        class="sc-edvVIM jqUbuK"
      >
        <i
          aria-hidden="true"
          class="sc-bRBteW dGDOmy"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-bRBteW dGDOmy"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-gHmoSK kRelkX sc-kubIlH gPwJGS"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-djMJHV upVlS"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-bRBteW dGDOmy"
    >
      : 
    </i>
    <span
      class="sc-gYEWkn krkUDN"
    >
      <span
        class="sc-gerFA cvtkPh"
      >
        😀😀😀😀😀😀😀😀😀😀😀
      </span>
    </span>
  </div>
</div>
`;
